--- a/package.json
+++ b/package.json
@@ -19,6 +19,14 @@
   "homepage": "https://github.com/edfcsx/clean-node-api#readme",
   "devDependencies": {
     "@types/node": "^17.0.35",
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
+    "eslint": "^8.16.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-config-standard-with-typescript": "^16.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.0",
+    "eslint-plugin-promise": "^6.0.0",
     "git-commit-msg-linter": "^4.1.3",
     "typescript": "^4.6.4"
   }
