--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A clean node api for polls",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "prepare": "husky install"
   },
   "repository": {
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/edfcsx/clean-node-api#readme",
   "devDependencies": {
+    "@types/jest": "^27.5.1",
     "@types/node": "^17.0.35",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
@@ -30,7 +31,9 @@
     "eslint-plugin-promise": "^6.0.0",
     "git-commit-msg-linter": "^4.1.3",
     "husky": "^8.0.1",
+    "jest": "^28.1.0",
     "lint-staged": "^12.4.1",
+    "ts-jest": "^28.0.2",
     "typescript": "^4.6.4"
   }
 }
