--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@types/jest": "^27.5.1",
     "@types/node": "^17.0.35",
+    "@types/validator": "^13.7.2",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
     "eslint": "^8.16.0",
@@ -40,5 +41,8 @@
     "ts-jest": "^28.0.2",
     "ts-node": "^10.8.0",
     "typescript": "^4.6.4"
+  },
+  "dependencies": {
+    "validator": "^13.7.0"
   }
 }
