--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/edfcsx/clean-node-api#readme",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/jest": "^27.5.1",
     "@types/node": "^17.0.35",
     "@types/validator": "^13.7.2",
@@ -43,6 +44,7 @@
     "typescript": "^4.6.4"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "validator": "^13.7.0"
   }
 }
